fix: adjust spacing and sizing of text in individual post

--- a/styles/mdx.css
+++ b/styles/mdx.css
@@ -1,9 +1,10 @@
 [data-rehype-pretty-code-figure] pre {
-	@apply px-0;
+	@apply px-0 overflow-x-auto;
 }
 
 [data-rehype-pretty-code-figure] code {
-	@apply text-sm !leading-loose md:text-base border-0 p-0;
+	@apply text-xs sm:text-sm md:text-base border-0 p-0;
+	white-space: pre;
 }
 
 [data-rehype-pretty-code-figure] code[data-line-numbers] {
@@ -17,7 +18,7 @@
 }
 
 [data-rehype-pretty-code-figure] [data-line] {
-	@apply border-l-2 border-l-transparent px-3;
+	@apply border-l-2 
 }
 
 [data-rehype-pretty-code-figure] [data-highlighted-line] {
